fix scrollbar issue

--- a/src/components/chat/w2wChat/chatBox/chatBox.css
+++ b/src/components/chat/w2wChat/chatBox/chatBox.css
@@ -77,8 +77,9 @@
 }
 
 .chatBoxTop div::-webkit-scrollbar {
-  width: 5px;
-  /* display: none; */
+  /* width: 4px; */
+  width: 0;
+  height: 0;
 }
 
 
